--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>My first websida</title>
+  <link rel="main.css" media="screen" title="no title" charset="utf-8">
 
 </head>
 <body>
